# server.js
@@ -23,6 +23,7 @@ const userController = require("./controller/userController");
 const categoryController = require("./controller/categoryController");
 const threadController = require("./controller/threadController");
 const commentController = require("./controller/commentController");
+const likeController = require("./controller/likeController");
 
 const bodyParser = require("body-parser");
 app.use(bodyParser.json());
@@ -53,14 +54,14 @@ app.post("/category/:categoryId/thread", threadController.post);
 app.get("/category/:categoryId/thread", threadController.get);
 
 //Likes on threads
-//app.post("/thread/:threadId/like", likeController.postForThread);
+app.post("/thread/:threadId/like", likeController.postForThread);
 
 //Comment
 app.post("/thread/:threadId/comment", commentController.post);
 app.get("/thread/:threadId/comment", commentController.get);
 
-//Likes on threads
-//app.post("/comment/:commentId/like", likeControler.postForComment);
+//Likes on comments
+app.post("/comment/:commentId/like", likeController.postForComment);
 
 app.listen(port, () => {
   console.log(`Example app listening at http://localhost:${port}`);
